<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Stark Browser</string>
    <string name="search_or_enter_url">Search or enter URL</string>
    <string name="new_tab">New Tab</string>
    <string name="incognito_tab">Incognito Tab</string>
    <string name="close_tab">Close Tab</string>
    <string name="close_all_tabs">Close All Tabs</string>
    <string name="restore_tab">Restore Last Tab</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="history">History</string>
    <string name="downloads">Downloads</string>
    <string name="settings">Settings</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="remove_bookmark">Remove Bookmark</string>
    <string name="bookmark_added">Bookmark added</string>
    <string name="bookmark_removed">Bookmark removed</string>
    <string name="share">Share</string>
    <string name="copy_url">Copy URL</string>
    <string name="url_copied">URL copied</string>
    <string name="find_in_page">Find in page</string>
    <string name="desktop_site">Desktop site</string>
    <string name="reload">Reload</string>
    <string name="stop">Stop</string>
    <string name="open_in_new_tab">Open in new tab</string>
    <string name="open_in_incognito">Open in incognito tab</string>
    <string name="save_image">Save image</string>
    <string name="copy_link">Copy link address</string>
    <string name="share_link">Share link</string>
    <string name="clear_data">Clear browsing data</string>
    <string name="clear_history">Clear history</string>
    <string name="clear_cookies">Clear cookies</string>
    <string name="clear_cache">Clear cache</string>
    <string name="data_cleared">Browsing data cleared</string>
    <string name="no_bookmarks">No bookmarks yet</string>
    <string name="no_history">No history yet</string>
    <string name="no_downloads">No downloads yet</string>
    <string name="page_load_error">Could not load page</string>
    <string name="no_internet">No internet connection</string>
    <string name="ssl_error">Security certificate error</string>
    <string name="proceed_anyway">Proceed anyway</string>
    <string name="go_back">Go back</string>
    <string name="homepage">Homepage</string>
    <string name="add_to_home_screen">Add to home screen</string>
    <string name="download_started">Download started</string>
    <string name="download_complete">Download complete</string>
    <string name="open_file">Open</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="search_engine">Search engine</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="system_default">System default</string>
    <string name="content_blocking">Content blocking</string>
    <string name="content_blocking_on">Content blocking: ON</string>
    <string name="content_blocking_off">Content blocking: OFF</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="incognito">Incognito</string>
    <string name="normal_mode">Normal mode</string>
    <string name="private_mode">Private mode – history won\'t be saved</string>
    <string name="tabs">Tabs</string>
    <string name="done">Done</string>
    <string name="delete_history_item">Delete this item</string>
    <string name="tab_count">%d</string>
    <string name="untitled">Untitled</string>
    <string name="loading">Loading…</string>
    <string name="stark_home">Stark Home</string>
    <string name="quick_search">Quick search</string>
    <string name="recent_sites">Recent sites</string>
    <string name="favourites">Favourites</string>
    <string name="permission_camera">Camera permission needed for this site</string>
    <string name="permission_mic">Microphone permission needed for this site</string>
    <string name="permission_location">Location permission needed for this site</string>
    <string name="permission_deny">Deny</string>
    <string name="permission_allow">Allow</string>
    <string name="results_of">%1$d of %2$d</string>
    <string name="no_results">No results</string>
    <string name="edit_bookmark">Edit bookmark</string>
    <string name="bookmark_name">Name</string>
    <string name="bookmark_url">URL</string>
    <string name="save">Save</string>
    <string name="general">General</string>
    <string name="privacy">Privacy</string>
    <string name="appearance">Appearance</string>
    <string name="performance">Performance</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="open_source_licences">Open source licences</string>
    <string name="javascript_enabled">JavaScript</string>
    <string name="cookies_enabled">Cookies</string>
    <string name="do_not_track">Do Not Track</string>
    <string name="data_saver">Data saver (block images)</string>
    <string name="default_homepage">about:home</string>
    <string name="custom_homepage">Custom homepage URL</string>
    <string name="set_homepage">Set as homepage</string>
    <string name="search_engine_google">Google</string>
    <string name="search_engine_bing">Bing</string>
    <string name="search_engine_duckduckgo">DuckDuckGo</string>
    <string name="search_engine_brave">Brave Search</string>
</resources>
