<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_new_tab" android:title="@string/new_tab" android:icon="@android:drawable/ic_input_add" />
    <item android:id="@+id/menu_new_incognito" android:title="@string/incognito_tab" />
    <item android:id="@+id/menu_bookmarks" android:title="@string/bookmarks" />
    <item android:id="@+id/menu_history" android:title="@string/history" />
    <item android:id="@+id/menu_downloads" android:title="@string/downloads" />
    <item android:id="@+id/menu_add_bookmark" android:title="@string/add_bookmark" />
    <item android:id="@+id/menu_find_in_page" android:title="@string/find_in_page" />
    <item android:id="@+id/menu_share" android:title="@string/share" />
    <item android:id="@+id/menu_copy_url" android:title="@string/copy_url" />
    <item android:id="@+id/menu_desktop_site" android:title="@string/desktop_site" android:checkable="true" />
    <item android:id="@+id/menu_add_to_home" android:title="@string/add_to_home_screen" />
    <item android:id="@+id/menu_zoom_in" android:title="@string/zoom_in" />
    <item android:id="@+id/menu_zoom_out" android:title="@string/zoom_out" />
    <item android:id="@+id/menu_clear_data" android:title="@string/clear_data" />
    <item android:id="@+id/menu_settings" android:title="@string/settings" />
</menu>
